@@ -1,7 +1,7 @@
 /* StarPU --- Runtime system for heterogeneous multicore architectures.
  *
  * Copyright (C) 2009, 2010, 2012  Université de Bordeaux 1
- * Copyright (C) 2010, 2011, 2012  Centre National de la Recherche Scientifique
+ * Copyright (C) 2010, 2011, 2012, 2013  Centre National de la Recherche Scientifique
  *
  * StarPU is free software; you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as published by
@@ -48,7 +48,6 @@ int main(int argc, char **argv)
 	conf.ncpus = 0;
 	conf.ncuda = 0;
 	conf.nopencl = 0;
-	conf.nspus = 0;
 
 	/* starpu_init should return -ENODEV */
 	ret = starpu_init(&conf);
